Deleted TimeStamp from Captures. Built ok.

--- a/WRST_Caribou3/Form1.resx
+++ b/WRST_Caribou3/Form1.resx
@@ -174,16 +174,16 @@
   <data name="ChangeOrientationToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH0SURBVDhPpZPdT1JhHMf5z6qLnK25pa01bLXZ5ssiLUod
-        luhKURFfiTNcCwHpyMGmBMgR8P39IrHZyjoCHcBNIOiuuzp8O4dzuHiWK12f7Xfx7Lvv57dznj0qibr+
-        sIbeiP+gIsd4ETqGmU1hbJ6HyZeA0RuDYZZDj+cQ3e5PGHC/Q22XX1MqlrGvHAjM7ndI494pYFoceruA
-        11sFuMRxbubh2Mhjcj0P29o3NLxcFZSqjCWsbF5IY4xNYzSYxkgwhaFACiZ/EkZfEgNvk+jz8jDM8bhv
-        3oJSlRkXC+eh0bRKCob9vBL9SbEoTRGCUMTPX+JBpK4vQgq6XB9Kwb+Q60CNliEFHY73SnQ2qpppUqDu
-        9EYplkfvLI9nb76im4lBT3PQOQ/RNvkR2lcHaLHuQ0Pt4ZFlHVeaHFGlKjPijwoTyzlYl3KgFnOwRLIw
-        h7MYD2UxupDBMJvBUDCDwfkTGAMnqDYsktdY2jqTgJ5J4Kk7jifTcejoGNpdMbROHeGx8whaB4cHdg7N
-        ti9Q60PkJ3SKhfNwoz1ACnRTnBKdjvT3y9cpcU3rJQVt9s+l4G+UJRJV92ZIQb1pW07OyKVbE6SgssHp
-        uf18WXxlYdzsYHG91Yfqh3PiJgZXG2lU1rtQcdeOy3dsuFhrxQU15VGq/4tK9Rssh5QjAoBtWQAAAABJ
-        RU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH2SURBVDhPpZPdT1JhHMf5z6qLmq65Wa01bLnZRjbJjFKH
+        L+h6wSR8QeQM50JAOnLQKQFyBMxM07pQe1uZR6ADuAkE3Xmnh2/ncA4Xz2ql87P9Lp599/38ds6zRyXR
+        8DSqpVcTB1RsD6ORPVjZNCzzPMyBJEz+OIyzHB77ttHr/YZ+7wbqeoLacrGC8/UngXn/C9J43xUxJQ69
+        XsSLtSI84rjfFuBaLWBipQDHm5/QjC8LSlXGFlU2L2RgYTMYDmcwFE5jIJSGOZiCKZBC/8sU+vw8jHM8
+        7ljXoFRlRsTCSWg0L5OCwSCvRH9SKklTgiCUcHgkHkQa+mKkoMfzpRz8D7kOXNYxpKDD9VGJjkdNM00K
+        1N3+LYrl8WSWx8OZH+hl4jDQHPTubbRNfIXu+WfctX+AltrEfdsKqm+7tpSqzFBwUxhbysP+Kg9qMQ9b
+        LAdrNIeRSA7DC1kMslkMhLN4Nr8PU2gftcZF8hrLW6eTMDBJdHkT6JxKQE/H0e6Jo3VyFw/cu9C5OLQ4
+        OTQ7dqA2RMhP6BYLJ+Fqe4gU6Cc5Jfo70t+vXKdErc5PCtqc38vBv6hIJGqapkmBxrwuJ8fk3PUxUlB1
+        y+278WhJfGVRXOtgcaU1gEv35sRNDC420qjSeHDhphPn6x04W2fHGTXlU6qnRaX6DSFRlB9fDKuFAAAA
+        AElFTkSuQmCC
 </value>
   </data>
   <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
