--- a/WRST_Caribou3/Form1.resx
+++ b/WRST_Caribou3/Form1.resx
@@ -174,16 +174,16 @@
   <data name="ChangeOrientationToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH0SURBVDhPpZPvTxJxHMf5z6wHOp1zM1tz2GrpprZIk1KH
-        JbpKVMKfxA3XQkA6OWxKgJyAmb/1gVmrlXUCHeAmEPSsZ3W8u+OOB9/pStdr+zz47r3367O7774qicah
-        sIbeiP2kIkd4GjqCmU1iYpGHyReH0RuFYZ7DY88B+t2fMezeQ0OfX1MslrC/2ROY3R+Qxr2Tx6w49HYe
-        L7bycInj3MzBsZHD9HoOtrXvuPFsVVCqMpawsnkphQk2hfFgCmPBJEYCSZj8CRh9CQy/SmDQy8OwwOO2
-        eQtKVWZSLJyHVtMqKRj180p0kkJBmgIEoYBfv8WDSONghBT0uT4Wg38h14E6LUMKehzvlehs1LTRpEDd
-        692nWB4D8zwevvyGfiYKPc1B5zxA1/QnaJ9/QLv1HTTUW9y1rKPqpmNfqcqM+XeFqZUsrK+zoJazsEQy
-        MIczmAxlML6UxiibxkgwjSeLxzAGjlFtWCavsbh1Lg49E8cDdwz3Z2PQ0VF0u6LonDnEPechtA4Od+wc
-        2mxfodaHyE/oFQvn4Up3gBToZjglOh3p75euU6JW6yUFXfYvxeBvlCQSNbfmSEGzaVtOzsjFq1OkoLLF
-        6bn2aEV8ZWHU97C43OnDpY4FcROD6lYalc0uVDTZUX7dhgsNVpSpKY9S/V9Uqj/pNJQLSSW5pwAAAABJ
-        RU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH1SURBVDhPpZPvTxJxHMf5z8oHObW5Za05bNVsM1vkD0od
+        lugqMQl/IjdcCwHp5LApAXICpqapbZW1Wqkn4AFuAoLPelbHuzvuePBdrXS+ts+D7957vz67++6rkqh/
+        EtbQq7EfVGQfY6F9mNkkRuZ4mHxxGL1RGGY4PPZsocf9Hf3uD6jr9muKxRL2pfcC8+4I0rg38pgSh17P
+        48VaHi5xnG9zcKzmMLGSg+3NIa4/WxaUqowlrGyeT2GETWE4mMJQMImBQBImfwJGXwL9rxLo8/IwzPK4
+        Y16DUpUZFQsnodG0TAoG/bwS/UmhIE0BglDAz1/iQaS+L0IKul1fi8H/kOvARS1DCjodn5XoeFQ30aRA
+        3eXdpFgevTM8Hr7cQw8ThZ7moHNuoX3iG7TPv6DZ+gka6iPuWlZQecuxqVRlhvwbwvhiFtbXWVALWVgi
+        GZjDGYyGMhieT2OQTWMgmMbTuQMYAweoMiyQ11jcOh2HnonjgTuG+1Mx6OgoOlxRtE3u4p5zF1oHhxY7
+        hybbDtT6EPkJXWLhJFzuCJAC3SSnRH9H+vul65S4oPWSgnb7djH4FyWJRPXtaVLQYFqXk2NSdmWcFFTc
+        dHquPloUX1kYtZ0sLrX5UNM6K25icL6RRkWDC+U37Dh3zYazdVacUVMepXpaVKrf3f6UB4JHHpcAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
