--- a/WRST_Caribou3/Form1.resx
+++ b/WRST_Caribou3/Form1.resx
@@ -126,9 +126,6 @@
   <data name="SurveyFlightsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
     <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;SurveyFlights&lt;/Key&gt;&lt;Caption&gt;Survey flights&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="Year"&gt;&lt;Caption&gt;Year&lt;/Caption&gt;&lt;DataTypeCode&gt;Int32&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;NULL&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;Year&lt;/DataMember&gt;&lt;Key&gt;Year&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;/Column0&gt;&lt;Column1 ID="Herd"&gt;&lt;Caption&gt;Herd&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;Herd&lt;/DataMember&gt;&lt;Key&gt;Herd&lt;/Key&gt;&lt;MaxLength&gt;8&lt;/MaxLength&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;/Column1&gt;&lt;Column2 ID="SurveyType"&gt;&lt;Caption&gt;Survey Type&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;SurveyType&lt;/DataMember&gt;&lt;Key&gt;SurveyType&lt;/Key&gt;&lt;MaxLength&gt;2&lt;/MaxLength&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;Width&gt;193&lt;/Width&gt;&lt;/Column2&gt;&lt;Column3 ID="CrewNumber"&gt;&lt;Caption&gt;Crew Number&lt;/Caption&gt;&lt;DataTypeCode&gt;Int32&lt;/DataTypeCode&gt;&lt;DataMember&gt;CrewNumber&lt;/DataMember&gt;&lt;Key&gt;CrewNumber&lt;/Key&gt;&lt;Position&gt;3&lt;/Position&gt;&lt;Visible&gt;False&lt;/Visible&gt;&lt;Width&gt;146&lt;/Width&gt;&lt;/Column3&gt;&lt;Column4 ID="Pilot"&gt;&lt;Caption&gt;Pilot&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;Pilot&lt;/DataMember&gt;&lt;Key&gt;Pilot&lt;/Key&gt;&lt;MaxLength&gt;20&lt;/MaxLength&gt;&lt;Position&gt;4&lt;/Position&gt;&lt;/Column4&gt;&lt;Column5 ID="Observer1"&gt;&lt;Caption&gt;Observer1&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;Observer1&lt;/DataMember&gt;&lt;Key&gt;Observer1&lt;/Key&gt;&lt;MaxLength&gt;20&lt;/MaxLength&gt;&lt;Position&gt;5&lt;/Position&gt;&lt;/Column5&gt;&lt;Column6 ID="Observer2"&gt;&lt;Caption&gt;Observer2&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Observer2&lt;/DataMember&gt;&lt;Key&gt;Observer2&lt;/Key&gt;&lt;MaxLength&gt;20&lt;/MaxLength&gt;&lt;Position&gt;6&lt;/Position&gt;&lt;/Column6&gt;&lt;Column7 ID="AircraftType"&gt;&lt;Caption&gt;Aircraft Type&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AircraftType&lt;/DataMember&gt;&lt;Key&gt;AircraftType&lt;/Key&gt;&lt;MaxLength&gt;20&lt;/MaxLength&gt;&lt;Position&gt;7&lt;/Position&gt;&lt;Width&gt;145&lt;/Width&gt;&lt;/Column7&gt;&lt;Column8 ID="TailNo"&gt;&lt;Caption&gt;Tail No&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;TailNo&lt;/DataMember&gt;&lt;Key&gt;TailNo&lt;/Key&gt;&lt;MaxLength&gt;10&lt;/MaxLength&gt;&lt;Position&gt;8&lt;/Position&gt;&lt;/Column8&gt;&lt;Column9 ID="TimeDepart"&gt;&lt;Caption&gt;Time Depart&lt;/Caption&gt;&lt;DataTypeCode&gt;DateTime&lt;/DataTypeCode&gt;&lt;DataMember&gt;TimeDepart&lt;/DataMember&gt;&lt;DefaultGroupInterval&gt;Date&lt;/DefaultGroupInterval&gt;&lt;EditType&gt;CalendarCombo&lt;/EditType&gt;&lt;FormatString&gt;yyyy-MM-dd HH:mm:ss&lt;/FormatString&gt;&lt;Key&gt;TimeDepart&lt;/Key&gt;&lt;Position&gt;9&lt;/Position&gt;&lt;Width&gt;179&lt;/Width&gt;&lt;/Column9&gt;&lt;Column10 ID="TimeReturn"&gt;&lt;Caption&gt;Time Return&lt;/Caption&gt;&lt;DataTypeCode&gt;DateTime&lt;/DataTypeCode&gt;&lt;DataMember&gt;TimeReturn&lt;/DataMember&gt;&lt;DefaultGroupInterval&gt;Date&lt;/DefaultGroupInterval&gt;&lt;EditType&gt;CalendarCombo&lt;/EditType&gt;&lt;FormatString&gt;yyyy-MM-dd HH:mm:ss&lt;/FormatString&gt;&lt;Key&gt;TimeReturn&lt;/Key&gt;&lt;Position&gt;10&lt;/Position&gt;&lt;Width&gt;165&lt;/Width&gt;&lt;/Column10&gt;&lt;Column11 ID="SpotterPlaneTailNo"&gt;&lt;Caption&gt;Spotter Plane Tail No&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;SpotterPlaneTailNo&lt;/DataMember&gt;&lt;Key&gt;SpotterPlaneTailNo&lt;/Key&gt;&lt;MaxLength&gt;10&lt;/MaxLength&gt;&lt;Position&gt;11&lt;/Position&gt;&lt;Width&gt;199&lt;/Width&gt;&lt;/Column11&gt;&lt;Column12 ID="SpotterPlaneType"&gt;&lt;Caption&gt;Spotter Plane Type&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;SpotterPlaneType&lt;/DataMember&gt;&lt;Key&gt;SpotterPlaneType&lt;/Key&gt;&lt;MaxLength&gt;30&lt;/MaxLength&gt;&lt;Position&gt;12&lt;/Position&gt;&lt;Width&gt;176&lt;/Width&gt;&lt;/Column12&gt;&lt;Column13 ID="SpotterPlanePilot"&gt;&lt;Caption&gt;Spotter Plane Pilot&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;SpotterPlanePilot&lt;/DataMember&gt;&lt;Key&gt;SpotterPlanePilot&lt;/Key&gt;&lt;MaxLength&gt;40&lt;/MaxLength&gt;&lt;Position&gt;13&lt;/Position&gt;&lt;Width&gt;195&lt;/Width&gt;&lt;/Column13&gt;&lt;Column14 ID="WeatherConditions"&gt;&lt;Caption&gt;Weather Conditions&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;WeatherConditions&lt;/DataMember&gt;&lt;Key&gt;WeatherConditions&lt;/Key&gt;&lt;MaxLength&gt;1000&lt;/MaxLength&gt;&lt;Position&gt;14&lt;/Position&gt;&lt;Width&gt;155&lt;/Width&gt;&lt;/Column14&gt;&lt;Column15 ID="SnowConditions"&gt;&lt;Caption&gt;Snow Conditions&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;SnowConditions&lt;/DataMember&gt;&lt;Key&gt;SnowConditions&lt;/Key&gt;&lt;MaxLength&gt;255&lt;/MaxLength&gt;&lt;Position&gt;15&lt;/Position&gt;&lt;Width&gt;174&lt;/Width&gt;&lt;/Column15&gt;&lt;Column16 ID="Notes"&gt;&lt;Caption&gt;Notes&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Notes&lt;/DataMember&gt;&lt;Key&gt;Notes&lt;/Key&gt;&lt;MaxLength&gt;1000&lt;/MaxLength&gt;&lt;Position&gt;16&lt;/Position&gt;&lt;/Column16&gt;&lt;Column17 ID="SOPNumber"&gt;&lt;Caption&gt;SOPNumber&lt;/Caption&gt;&lt;DataTypeCode&gt;Int32&lt;/DataTypeCode&gt;&lt;DataMember&gt;SOPNumber&lt;/DataMember&gt;&lt;Key&gt;SOPNumber&lt;/Key&gt;&lt;Position&gt;17&lt;/Position&gt;&lt;Width&gt;179&lt;/Width&gt;&lt;/Column17&gt;&lt;Column18 ID="SOPVersion"&gt;&lt;Caption&gt;SOPVersion&lt;/Caption&gt;&lt;DataTypeCode&gt;Decimal&lt;/DataTypeCode&gt;&lt;DataMember&gt;SOPVersion&lt;/DataMember&gt;&lt;Key&gt;SOPVersion&lt;/Key&gt;&lt;Position&gt;18&lt;/Position&gt;&lt;Width&gt;167&lt;/Width&gt;&lt;/Column18&gt;&lt;Column19 ID="RecordInsertedDate"&gt;&lt;Caption&gt;Record Inserted Date&lt;/Caption&gt;&lt;DataTypeCode&gt;DateTime&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;NULL&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;RecordInsertedDate&lt;/DataMember&gt;&lt;DefaultGroupFormatString&gt;yyyy-MM-dd HH:mm:ss&lt;/DefaultGroupFormatString&gt;&lt;DefaultGroupInterval&gt;Date&lt;/DefaultGroupInterval&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;FormatString&gt;d&lt;/FormatString&gt;&lt;Key&gt;RecordInsertedDate&lt;/Key&gt;&lt;Position&gt;19&lt;/Position&gt;&lt;Width&gt;262&lt;/Width&gt;&lt;/Column19&gt;&lt;Column20 ID="RecordInsertedBy"&gt;&lt;Caption&gt;Record Inserted By&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;RecordInsertedBy&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;RecordInsertedBy&lt;/Key&gt;&lt;MaxLength&gt;50&lt;/MaxLength&gt;&lt;Position&gt;20&lt;/Position&gt;&lt;Width&gt;226&lt;/Width&gt;&lt;/Column20&gt;&lt;Column21 ID="FlightID"&gt;&lt;Caption&gt;Flight ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;TypeNameEmptyStringValue&gt;System.String&lt;/TypeNameEmptyStringValue&gt;&lt;EmptyStringValue /&gt;&lt;DataMember&gt;FlightID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;FlightID&lt;/Key&gt;&lt;MaxLength&gt;50&lt;/MaxLength&gt;&lt;Position&gt;21&lt;/Position&gt;&lt;Width&gt;221&lt;/Width&gt;&lt;/Column21&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;SortOrder&gt;Descending&lt;/SortOrder&gt;&lt;/SortKey0&gt;&lt;SortKey1 ID="SortKey1"&gt;&lt;ColIndex&gt;1&lt;/ColIndex&gt;&lt;/SortKey1&gt;&lt;SortKey2 ID="SortKey2"&gt;&lt;ColIndex&gt;2&lt;/ColIndex&gt;&lt;/SortKey2&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;FontBold&gt;True&lt;/FontBold&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
   </data>
-  <metadata name="SurveyFlightsToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>215, 49</value>
-  </metadata>
   <metadata name="SurveysBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1073, 17</value>
   </metadata>
@@ -137,6 +134,15 @@
   </data>
   <metadata name="SurveysToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 49</value>
+  </metadata>
+  <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1549, 17</value>
+  </metadata>
+  <data name="CollaredAnimalsInGroupsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
+    <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;IBindingList&lt;/Key&gt;&lt;Caption&gt;Collared animals in group&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="AnimalID"&gt;&lt;Caption&gt;Animal ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AnimalID&lt;/DataMember&gt;&lt;EditType&gt;Combo&lt;/EditType&gt;&lt;Key&gt;AnimalID&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;Width&gt;660&lt;/Width&gt;&lt;/Column0&gt;&lt;Column1 ID="Comment"&gt;&lt;Caption&gt;Comment&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Comment&lt;/DataMember&gt;&lt;Key&gt;Comment&lt;/Key&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;Width&gt;807&lt;/Width&gt;&lt;/Column1&gt;&lt;Column2 ID="EID"&gt;&lt;Caption&gt;EID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;EID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;EID&lt;/Key&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;/Column2&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;/SortKey0&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
+  </data>
+  <metadata name="WRST_CaribouDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ImportSurveyDataFromFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -174,29 +180,26 @@
   <data name="ChangeOrientationToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH1SURBVDhPpZPvTxJxHMf5z8oHObW5Za05bNVsM1vkD0od
-        lugqMQl/IjdcCwHp5LApAXICpqapbZW1Wqkn4AFuAoLPelbHuzvuePBdrXS+ts+D7957vz67++6rkqh/
-        EtbQq7EfVGQfY6F9mNkkRuZ4mHxxGL1RGGY4PPZsocf9Hf3uD6jr9muKxRL2pfcC8+4I0rg38pgSh17P
-        48VaHi5xnG9zcKzmMLGSg+3NIa4/WxaUqowlrGyeT2GETWE4mMJQMImBQBImfwJGXwL9rxLo8/IwzPK4
-        Y16DUpUZFQsnodG0TAoG/bwS/UmhIE0BglDAz1/iQaS+L0IKul1fi8H/kOvARS1DCjodn5XoeFQ30aRA
-        3eXdpFgevTM8Hr7cQw8ThZ7moHNuoX3iG7TPv6DZ+gka6iPuWlZQecuxqVRlhvwbwvhiFtbXWVALWVgi
-        GZjDGYyGMhieT2OQTWMgmMbTuQMYAweoMiyQ11jcOh2HnonjgTuG+1Mx6OgoOlxRtE3u4p5zF1oHhxY7
-        hybbDtT6EPkJXWLhJFzuCJAC3SSnRH9H+vul65S4oPWSgnb7djH4FyWJRPXtaVLQYFqXk2NSdmWcFFTc
-        dHquPloUX1kYtZ0sLrX5UNM6K25icL6RRkWDC+U37Dh3zYazdVacUVMepXpaVKrf3f6UB4JHHpcAAAAA
-        SUVORK5CYII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH2SURBVDhPpZPvTxJxHMf5z6oHNl1zM1tr2HKzzXSRFqUO
+        S3RpqIQ/kLjhWghIJ4dNCZATMDN/UGulTlfmCXiAm0DQs57V8e6OOx58Vytdr+3z4Lv33q/P7r77qiSa
+        hiIaei3xnYoe4Un4CBY2DfMCD5M/CaMvDsMchwHvHvo8nzHs+YCG3oCmXKzgeP1eYN59gzSet0XMiEPH
+        ini+UYRbHNd6Ac61AqZWC7C/+YrGpyuCUpWxRpTNixmY2QzGQxmMhdIYCaZhCqRg9Kcw/DKFQR8PwzyP
+        W5YNKFWZCbFwGlpMK6RgNMAr0e+UStKUIAgl/PgpHkSaBqOkoNe9Ww7+hVwH6rUMKeh2bivRyahto0mB
+        use3SbE8Hs3xePjiEH1MHHqag861h86pT9A+20G7bQsa6iPuWldR0+rcVKoyY4GYMLmch+1VHtRSHtZo
+        DpZIDhPhHMYXsxhlsxgJZfF44RjG4DFqDEvkNZa3ziahZ5J44Eng/kwCOjqOLnccHdMHuOc6gNbJ4baD
+        Q5t9H2p9mPyEHrFwGi53BUmBbppToj8j/f3KdUrUaX2koNPxpRz8jYpEovbmLCloNsXk5IScuzpJCqpv
+        uLzX+pfFVxbBlW4Wlzr8uHhnXtzE4EILjepmN85fd6Cq0Y6zDTacUVNepfq/qFS/ANLIlAOMoL/jAAAA
+        AElFTkSuQmCC
 </value>
-  </data>
-  <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>1549, 17</value>
-  </metadata>
-  <data name="CollaredAnimalsInGroupsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
-    <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;IBindingList&lt;/Key&gt;&lt;Caption&gt;Collared animals in group&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="AnimalID"&gt;&lt;Caption&gt;Animal ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AnimalID&lt;/DataMember&gt;&lt;EditType&gt;Combo&lt;/EditType&gt;&lt;Key&gt;AnimalID&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;Width&gt;660&lt;/Width&gt;&lt;/Column0&gt;&lt;Column1 ID="Comment"&gt;&lt;Caption&gt;Comment&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Comment&lt;/DataMember&gt;&lt;Key&gt;Comment&lt;/Key&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;Width&gt;807&lt;/Width&gt;&lt;/Column1&gt;&lt;Column2 ID="EID"&gt;&lt;Caption&gt;EID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;EID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;EID&lt;/Key&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;/Column2&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;/SortKey0&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
   </data>
   <metadata name="CapturesBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>626, 49</value>
   </metadata>
   <metadata name="MainToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>2315, 17</value>
+  </metadata>
+  <metadata name="HelpProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>458, 49</value>
   </metadata>
   <data name="SaveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -244,6 +247,21 @@
 </value>
   </data>
   <data name="OpenCapturesFormToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="AllowEditsToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
