--- a/WRST_Caribou3/CapturesForm.resx
+++ b/WRST_Caribou3/CapturesForm.resx
@@ -181,4 +181,7 @@
   <metadata name="CapturesTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1151, 17</value>
   </metadata>
+  <metadata name="BottomToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1395, 17</value>
+  </metadata>
 </root>
