--- a/WRST_Caribou3/Form1.resx
+++ b/WRST_Caribou3/Form1.resx
@@ -135,6 +135,12 @@
   <metadata name="SurveysToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 49</value>
   </metadata>
+  <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1549, 17</value>
+  </metadata>
+  <data name="CollaredAnimalsInGroupsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
+    <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;IBindingList&lt;/Key&gt;&lt;Caption&gt;Collared animals in group&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="AnimalID"&gt;&lt;Caption&gt;Animal ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AnimalID&lt;/DataMember&gt;&lt;EditType&gt;Combo&lt;/EditType&gt;&lt;Key&gt;AnimalID&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;Width&gt;311&lt;/Width&gt;&lt;/Column0&gt;&lt;Column1 ID="Comment"&gt;&lt;Caption&gt;Comment&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Comment&lt;/DataMember&gt;&lt;Key&gt;Comment&lt;/Key&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;Width&gt;807&lt;/Width&gt;&lt;/Column1&gt;&lt;Column2 ID="EID"&gt;&lt;Caption&gt;EID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;EID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;EID&lt;/Key&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;/Column2&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;/SortKey0&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ImportSurveyDataFromFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -171,26 +177,23 @@
   <data name="ChangeOrientationToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAH1SURBVDhPpZPvTxJxHMf5z8oHNVtzy1o5bLXZZrbIlFKH
-        Jbp+YBL+RG64FgLiyWFTAuQE1AjTelDmdGqegAe4CQQ961kd7+6448F3NX+s1/Z58N1779dnd999VRIN
-        L8Iaejnxk4ocYDR0ADObxvAcD5MvCaM3DsMMh2eeHfS4t9Hn/oz6br+mXKxgfxcTmE8/II37YxFT4tCr
-        RUyuFOESx/mhAMdyAeOxAmzvv+Paq6igVGUsYWXzfAbDbAZDwQwGg2n0B9Iw+VMw+lLoe5tCr5eHYZbH
-        PfMKlKrMiFg4DU2mKCkY8PNK9DelkjQlCEIJv36LB5GG3ggp6HZtloPjkOvAZS1DCjod60p0MmqaaVKg
-        7vKuUSyP5zM8nrzZRw8Th57moHPuoH18C9rXG7hv/QoN9QUPLDFcuONYU6oyg/6oMLaUh3UxD2ohD0sk
-        B3M4h5FQDkPzWQywWfQHs3g5dwhj4BBVhgXyGstbp5PQM0k8difwaCoBHR1HhyuOtok9PHTuQevg0GLn
-        0GzbhVofIj+hSyychqsdAVKgm+CU6N9If79ynRKXtF5S0G7/Vg6OoiKRqLk7TQoaTatyckKqro+Rgurb
-        Ts+Np0viKwujrpPFlTYfaltnxU0MLjbRqG504fwtO87dtOFsvRVn1JRHqf4vKtUffRqT5TxOtrAAAAAA
-        SUVORK5CYII=
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAH0SURBVDhPpZPvTxJxHMf5z6wHOVtzK1tr2GrTTW2SGf4a
+        lujKMAl/IjdcCwHp5LApAnICZvjbB2WtVtYJdICbQOCznunx7o47HnxXK52v7fPgu/fer8/uvvuqJOqe
+        hTX0evwXFTnAROgAZjaFsUUeJl8CRm8MhjkO/Z499Lm/YtD9DrW9fk2pWMb+NiowO0eQxr1dwIw49FYB
+        rzYLcInj3MjDsZ7H1FoettWfqHkRFZSqjCWsbF5KY4xNYzSYxkgwhaFACiZ/EkZfEoMLSQx4eRjmedwz
+        b0KpyoyLhbPQZIqSgmE/r0R/UixKU4QgFHF8Ih5E6gYipKDX9bkU/A+5DtRoGVLQ7fioRKejuoUmBeoe
+        7y7F8ng6x+Px6x/oY2LQ0xx0zj10Tn2B9uUn3Ld+gIZ6jzbLGi7fdewqVZkRf1SYXMnB+iYHajkHSyQL
+        cziL8VAWo0sZDLMZDAUzeL54CGPgEBWGZfIaS1tnE9AzCTxyx/FwJg4dHUOXK4aO6X20O/ehdXBotXNo
+        sX2HWh8iP6FHLJyFG10BUqCb5pTo70h/v3ydEle1XlLQaf9WCv5FWSJR3TxLChpMW3JySi7emiQFVY1O
+        z+0nK+IrC+NmN4vrHT5cezAvbmJwpYlGVYMLlfV2XLpjw4VaKyrUlEepnheV6jdjfJPdhVfE5AAAAABJ
+        RU5ErkJggg==
 </value>
-  </data>
-  <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>1549, 17</value>
-  </metadata>
-  <data name="CollaredAnimalsInGroupsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
-    <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;IBindingList&lt;/Key&gt;&lt;Caption&gt;Collared animals in group&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="AnimalID"&gt;&lt;Caption&gt;Animal ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AnimalID&lt;/DataMember&gt;&lt;EditType&gt;Combo&lt;/EditType&gt;&lt;Key&gt;AnimalID&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;Width&gt;660&lt;/Width&gt;&lt;/Column0&gt;&lt;Column1 ID="Comment"&gt;&lt;Caption&gt;Comment&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Comment&lt;/DataMember&gt;&lt;Key&gt;Comment&lt;/Key&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;Width&gt;807&lt;/Width&gt;&lt;/Column1&gt;&lt;Column2 ID="EID"&gt;&lt;Caption&gt;EID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;EID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;EID&lt;/Key&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;/Column2&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;/SortKey0&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
   </data>
   <metadata name="MainToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>2315, 17</value>
+  </metadata>
+  <metadata name="HelpProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>458, 49</value>
   </metadata>
   <data name="SaveToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -288,6 +291,9 @@
   <metadata name="BottomToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1122, 49</value>
   </metadata>
+  <metadata name="WRST_CaribouDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="CapturesBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>626, 49</value>
   </metadata>
@@ -307,6 +313,6 @@
     <value>878, 49</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>311</value>
+    <value>150</value>
   </metadata>
 </root>
