--- a/WRST_Caribou3/Form1.resx
+++ b/WRST_Caribou3/Form1.resx
@@ -135,6 +135,15 @@
   <metadata name="SurveysToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 49</value>
   </metadata>
+  <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1549, 17</value>
+  </metadata>
+  <data name="CollaredAnimalsInGroupsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
+    <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;IBindingList&lt;/Key&gt;&lt;Caption&gt;Collared animals in group&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="AnimalID"&gt;&lt;Caption&gt;Animal ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AnimalID&lt;/DataMember&gt;&lt;EditType&gt;Combo&lt;/EditType&gt;&lt;Key&gt;AnimalID&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;Width&gt;311&lt;/Width&gt;&lt;/Column0&gt;&lt;Column1 ID="Comment"&gt;&lt;Caption&gt;Comment&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Comment&lt;/DataMember&gt;&lt;Key&gt;Comment&lt;/Key&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;Width&gt;807&lt;/Width&gt;&lt;/Column1&gt;&lt;Column2 ID="EID"&gt;&lt;Caption&gt;EID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;EID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;EID&lt;/Key&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;/Column2&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;/SortKey0&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
+  </data>
+  <metadata name="WRST_CaribouDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ImportSurveyDataFromFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -171,23 +180,17 @@
   <data name="ChangeOrientationToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH1SURBVDhPpZPvTxJxHMf5z6wHNVuzla05dLrZZrbIklKH
-        Kbp+YBLgD+KGayIgnhw2JUBOwIw0rQelTVfWCXSAm0DQs57l8e6OOx58Vyudr+3z4Lv33q/P7r77qiRa
-        H0c19FryJxXbx9PIPqxsBmOLPEyBFIz+BAzzHB76djHo/Yxh73s0DgQ1lWIV56u4wLz7AWm8b0uYFYfe
-        KGFmvQSPOO43RbjWiphaLcLx+jsuPIsLSlXGFlU2L2UxxmYxGs5iJJyBOZSBKZiGMZDG8Is0hvw8DAs8
-        blrXoVRlxsXCcWg3xUmBJcgr0Z+Uy9KUIQhl/DoUDyKtQzFSMODZqQT/Q64D9VqGFPS6PirR0ajroEmB
-        ut+/SbE8Hs3zuP/8GwaZBPQ0B517F91Tn6Cd3MYt+xY01Afcsa3i3HXXplKVGQnGhYmVAuwvC6CWC7DF
-        8rBG8xiP5DG6lIOFzcEczuHJ4gGMoQPUGJbJa6xsnUtBz6TQ503i3mwSOjqBHk8CXdN7uOveg9bF4baT
-        Q4fjK9T6CPkJ/WLhOFzpCZEC3TSnRH9H+vvV65S4qPWTgm7nl0rwL6oSibobc6SgzbQhJ0fkdNMEKai9
-        5vY1P1gRX1kUDb0sLncFcKlzQdzE4Hw7jdo2D85edeJMiwOnGu2oUVM+pXpSVKrfVRST2T9GSHgAAAAA
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAH1SURBVDhPpZPvTxJxHMf5z7QHNZtj68dcQ5ebbWYLtTB1
+        aKLrBybhT+KGayIgnhw6JUBOwIw0rQdlrZbWCXSAm0DQM5/p8e6OOx58VzNdr+3z4Lv33q/P7r77qiSa
+        nkS09EbikIru41l4HxY2jfFlHmZ/EiZfHMZFDo+8uxjw7GDI8x71/QFtuVjB8SomMO9+QRrP2yLmxKG3
+        ipjdLMItjutNAc6NAqbXC7C//gn185igVGWsEWXzSgbjbAZjoQxGQ2kMB9MwB1Iw+VMYepHCoI+HcYlH
+        q2UTSlVmQiychRZzjBSMBHgl+pNSSZoSBKGEo2PxINI0GCUF/e4v5eBfyHXgio4hBT3OT0p0OtRtNCnQ
+        9Pm2KZbH40UeDxZ+YICJw0Bz0Lt20TX9Fbqpz2i3fYSW+oAO6zou3nJuK1WZ0UBMmFzLw/YyD2o1D2s0
+        B0skh4lwDmMrWYywWQyHsni6fABT8ABVxlXyGstb55MwMEnc9yTQO5eAno6j2x1H58we7rn2oHNyuOPg
+        0Gb/Do0hTH5Cn1g4C3XdQVKgn+GU6O9If79ynRKXdD5S0OX4Vg5OoiKRUN+eJwXN5i05OSXnGiZJQc1N
+        l/f6wzXxlUVwrYfF1U4/Lt9dEjcxqG2hUdPsxoUbDpxvtKO63oYqDeVVqv+LSvUbUXqT2O535hMAAAAA
         SUVORK5CYII=
 </value>
-  </data>
-  <metadata name="CollaredAnimalsInGroupsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>1549, 17</value>
-  </metadata>
-  <data name="CollaredAnimalsInGroupsGridEX_DesignTimeLayout.LayoutString" xml:space="preserve">
-    <value>&lt;GridEXLayoutData&gt;&lt;RootTable&gt;&lt;Key&gt;IBindingList&lt;/Key&gt;&lt;Caption&gt;Collared animals in group&lt;/Caption&gt;&lt;Columns Collection="true" ElementName="Column"&gt;&lt;Column0 ID="AnimalID"&gt;&lt;Caption&gt;Animal ID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;AnimalID&lt;/DataMember&gt;&lt;EditType&gt;Combo&lt;/EditType&gt;&lt;Key&gt;AnimalID&lt;/Key&gt;&lt;Position&gt;0&lt;/Position&gt;&lt;Width&gt;311&lt;/Width&gt;&lt;/Column0&gt;&lt;Column1 ID="Comment"&gt;&lt;Caption&gt;Comment&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;Comment&lt;/DataMember&gt;&lt;Key&gt;Comment&lt;/Key&gt;&lt;Position&gt;1&lt;/Position&gt;&lt;Width&gt;807&lt;/Width&gt;&lt;/Column1&gt;&lt;Column2 ID="EID"&gt;&lt;Caption&gt;EID&lt;/Caption&gt;&lt;DataTypeCode&gt;String&lt;/DataTypeCode&gt;&lt;DataMember&gt;EID&lt;/DataMember&gt;&lt;EditType&gt;NoEdit&lt;/EditType&gt;&lt;Key&gt;EID&lt;/Key&gt;&lt;Position&gt;2&lt;/Position&gt;&lt;/Column2&gt;&lt;/Columns&gt;&lt;SortKeys Collection="true" ElementName="SortKey"&gt;&lt;SortKey0 ID="SortKey0"&gt;&lt;ColIndex&gt;0&lt;/ColIndex&gt;&lt;/SortKey0&gt;&lt;/SortKeys&gt;&lt;GroupCondition /&gt;&lt;TableHeaderFormatStyle&gt;&lt;Font&gt;Arial, 12pt, style=Bold&lt;/Font&gt;&lt;/TableHeaderFormatStyle&gt;&lt;/RootTable&gt;&lt;/GridEXLayoutData&gt;</value>
   </data>
   <metadata name="MainToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>2315, 17</value>
@@ -253,6 +256,21 @@
 </value>
   </data>
   <data name="AllowEditsToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="SettingsToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
