Added caribou icon to all forms

--- a/WRST_Caribou3/CaribouProfileForm.resx
+++ b/WRST_Caribou3/CaribouProfileForm.resx
@@ -120,4 +120,64 @@
   <metadata name="MainToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAGACoDAAAFgAAACgAAAAgAAAAQAAAAAEAGAAAAAAAAAAAAEgAAABIAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB9fX17e3t9fX19fX16enp8
+        fHx+fn57e3t4eHh7e3sAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAABnZ2diYmJra2taWlpkZGRlZWViYmJkZGRdXV1lZWUAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmZmZc
+        XFxdXV1bW1tkZGRWVlZqampqampaWlpdXV1qamoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABWVlY0NDQAAAAAAAAAAAAAAAAAAAAAAAAAAABoaGgrKys+Pj4AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABWVlYNDQ0AAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB0dHQAAAApKSkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABmZmYJCQkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALCwsaGhp/f38AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnZ2cBAQF+fn4A
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAgICAWFhZycnIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnZ2cAAAB3d3cAAAAAAAAAAAAAAAAAAAAAAAAAAAA2NjYX
+        FxdfX18AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABnZ2cAAABubm4AAAAAAAAAAAAAAAAAAAAAAAAAAABLS0sYGBhNTU0AAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABdXV0AAABlZWUAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAsLCwXFxc9PT0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABycnIAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAwMDAAAABZWVkAAAAAAAAAAAAAAAAAAAAAAABUVFQAAAAbGxtAQEAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAyMjIGBgZmZmYAAAAAAAAAAAAAAAAAAAAAAAAAAAB6enoGBgYAAABNTU0A
+        AABycnJjY2N2dnYAAABycnIJCQkEBAQnJyd4eHgAAAAAAAAAAAAAAAAAAAAAAAAAAAB7e3tkZGQCAgIK
+        CgpsbGwAAAAAAAAAAAAAAABiYmI3NzcWFhYAAAAAAAAeHh4aGhoAAAAAAAAAAAAGBgYLCwsAAAAdHR1S
+        UlIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABVVVUrKys5OTkAAAAQEBBbW1teXl5eXl45OTkBAQEAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+Pj4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAqKioNDQ02NjYPDw8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAQEBB6enoAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f39UVFR+fn40NDQLCwsHBwcEBAQAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3NzcAAAAAAAAAAAAA
+        AAAAAAAAAAB8fHwrKysmJiYvLy8xMTEPDw9RUVEAAAB/f39dXV0MDAwAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA5OTkAAAAAAAAAAAAAAAAAAAAAAAB3d3c7OztdXV0AAAAAAABu
+        bm4WFhZ8fHwAAAAAAAB0dHQjIyMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABj
+        Y2MAAAAAAAAAAAAAAAAAAAAAAAB/f39mZmYAAAAAAAAAAAAAAAA3NzdAQEAAAAAAAAAAAAB/f39DQ0MC
+        AgIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPDw9/f38AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABYWFgVFRUAAAAAAAAAAAAAAAAAAABkZGRERERERERERERERERERERERERERERE
+        RERERERERERZWVkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAqKipDQ0MAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1dXUFBQV0dHQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/f39D
+        Q0MpKSkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaGhoGBgYUFBQ8PDwAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAB4eHhiYmJsbGxycnIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/////wA///8AP///AB/////////////////////8/j///P4///z/H//8fx///
+        H8f//x/H//8fx/3/H4f4/hEH8HgAD/AAAB/wAAAP4AAAD8BAAA/GMAAPzzgAD/8+AB//P////j////x/
+        ///4f///+H///////////////////w==
+</value>
+  </data>
 </root>
