Commit prior to putting DevEx GridControl and PivotGridControl in ResultsForm

--- a/WRST_Caribou3/ResultsForm.resx
+++ b/WRST_Caribou3/ResultsForm.resx
@@ -121,39 +121,39 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="ExportToCSVToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAJySURBVDhPhZLbbhJRFIbnRq99CV/ERzBqYmzshV6YRmNi
-        tBeNNk1DWsVaD8RDsTaVQqEcyqBFCI1F5VimFmgFimOrodjCADLAhHKI+Z29mZo20vgnf9bsZK1vrbX3
-        MF6v94TH47nqdrs/uFyuwsLCQs3hcMTsdrvaarWeZP4nuVifTCZRKpXQbDbRbrchiiLS6TQsFsuGkna0
-        5K6ler0OSZL+AsiZ2GQyQePaxSPnDsbeZHHXnoHK+gNDc5u4Y/iGAd3XCON0OvPVapV2zGazyGQyCIfD
-        qFQqMBgMkPbaR/rmdLLByDvnGo0GeJ5HuVxGLBajJtLpdNBw9zG+PIp7wWGofIMY+jiA20v9FHD95Rcw
-        LMtSQCKRoACO46iJpqamaOwmAuh7Hgdjs9koIB6Po1gsIhAIIBgM0iStVotZX76rCeCyZhWM/FRiq9VC
-        KpWi+0ciEUSjUQrQaDQ0EllDOeWro0JlD70POTDyTc+RkQVBoM9HLpRMQkCPn2oxv5wHK5sASGTDOThX
-        ctjareK8OgzGbDYfn5mZ6ZvU22G2WDA5rYfRaMSk8R1qtZrS798J+J8VnB0Jgv4LExMTx9TWDfBb25hb
-        XIPtEw82tI23KwK1a1WgADqFPMG87I2MiDMj/g6AaNj8HeVakyYTLcYKNO7LExVQrbeVEyig94G8wr4G
-        TZsU4JELSfFBv48X4PwsHDIB9KiVFYgG9Gn8kgFLa53O3vXDE9hCncn2RScYOwC49TqFUrUBQdzDTqmO
-        jCDJN10Dn63Q5G7uUft/K+UMc+NVwn/txbp05Vkcl56s4uI4hwvqZZwbDeG0ytfVp/o97B8FOQaw6pCQ
-        ugAAAABJRU5ErkJggg==
-</value>
-  </data>
   <data name="ReloadQueryToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAALWSURBVDhPlVLdS5NRHH7JC+miv6ALs7TSULEohG6CsAsp
-        QmuWS9PUSl20DIVckKVREemY6MRUtkljbtp0H2zOiRtzF2bNj7GtLT+YXqi8pAydujH16X1PI8mI6IEf
-        nPP+zvOc93l+h2JhMBhiBwcHOUypjUajh9lHmArr9XqHTqdTarXaSyqVKoYc3o+hoaFkhjg1OTmJ5eVl
-        rK+vY2dnB9vb21hZWYHf74fNZkNvb++IUqk8HKXtwWQyWebn57G7u4u/IRKJYGJiAgLTYz9Hxfn9TxgB
-        OhQK/VOApmlU6ssiJTquNUr9CcYzvbW1BdbCzMwMsREOh/H1uwtCxyvwrSXgDRXhvrEAdbYaPBuuRp78
-        qilKpygmKHpzcxMLCwtwOByw2+0wjOlQb69Bh7MZ2m896PN146NXDpWnCwq3BFX6B7gizpwhAkzK9MbG
-        BlZXV7G4uEiEJJNtaJ1ohManQv2IAHf6biBfmYMnRj6qdDxcbs40EzILjUZDB4NB4pENc3Z2FgJbJcoG
-        ClCq46Jaw4fFYiHCBe25kazmi7baWupARkPGQSLQ399Ps6NbWloiZJ/PR0Y3PT1N7BgHjDCbzUS8uCU/
-        9McU1Go1vba2Rm7wer1wu90kTHZttVrBWMQjGY+IisViOkrbA/NA6EAggLm5ObhcLjidTnK70zWFYcsw
-        StsLwW25TvpCoZDOeJpuO1OdglR+EpLLE/1Ud3c3zTZZG4QYFfB4PKiQlqJCWYy7Hwpw/vlZnBOk42Zr
-        NhpG61Aiu4WEkvg2Si6XZzEVHB8fJ0+XDZSdSt77bJQpitDqaEDz57cQjb1G46eXeDf6gnxPKD7yJa7w
-        8AVio6urK14qlXZKJJKATCZDT08PFAoFct/k4HZnLrht15BWmYxTvOM4ce8YjhbHWX+R96Ojo+MQE1Z6
-        U1NTmkgkij1dlWJNfZjkjLb/HxwOFXOyPFEV3e4DRf0APtdNjxRU6lwAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALTSURBVDhPlVLtS5NRHH3ID9KH/gKhsuxFQ82iEPoShEEh
+        gdYsNfO1NBeppJAGWRoVkQtlKuZkbjTWNpu6zc254cbcB7Pm5tjWli9MP6g8pIhOnUw9Pc9tKBkRHbhw
+        7/3dc+4953cpFlqtNnJgYIDDDKVOp/P09fWFmL0NjUZjU6vVMpVKdVkul0eQw3thNBrj9Hr9mMPhwPz8
+        PFZWVrC1tYXNzU0sLCzA7/fDYrGgq6trSCaTRYVpu2DIpunpaWxvb+NvCIVCsNvtqNZX+Dlyzu8vYQTo
+        YDD4TwGaplGuLg4VqrPMYeovMJ7p9fV1sBYmJiaIjY2NDXz74cI720uUmQvBNeahWJeDOks1ng5WIVNy
+        TR+mUxQTEr22toaZmRnYbDZYrVZoR9Sot1ZD4ORD9V2Bbt9HfPJKIPeIIXULUal5gNTmlAkiwCRMr66u
+        YnFxEbOzs0RI6GhDq52HXp8c9UM1yO++iduydDzWlaFSzUUqP8VAyCx6enroQCBAPLJhTk5OosZSgZL+
+        HBSps1DVWwaTyUSEc9ozQlf4lyy1tdS+5Ibk/TsCbOvm5uYI2efzkdaNj48TO7p+HQwGAxHPb84O/tEF
+        pVJJLy8vkxu8Xi/cbjcJk52bzWYwGaFcxCWiLS0tdJi2C+aD0EtLS5iamoLL5YLT6SS3O11jGDQNoqg9
+        F1nNN0idx+PRyU9OW85WxSOhLBZxJcf8lFQqpdkia4MQwwIejwelnUUolRXg7occXHh2DudrknCrNQ0N
+        w3UoFGUjpiC6jZJIJFeZERgdHSVflw2U7Urm+zSUSPPQamsA/8sbNI68Au/zC7wdfk72Y/IPfz2UG3WR
+        2BCLxdGdnZ0dQqFwSSQSQaFQgHkZMl6n405HBrLariOxIg6nuMdx4t5RHCk4aN4h74VAIDjAhJXU1NSU
+        2NjYGHnmUbw54WGsM1z+f3A4VMTJ+8fk4eUeUNRP5a1NabtR5bQAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="ExportToCSVToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJpSURBVDhPhZJbTxNRFIXnRZ/9E/4Rf4JRE6ORB30whMTE
+        iA+NEkIa0Ip4aZRQawO92Ct0oqXFEqlaekfagr05gqZUKNOWXtNrzPKc02IglriSlT2T7P2ddfYM53K5
+        zjidzqGlpaWPDocjZ7PZqjzPR6xWq8xisZzl/icyrI3H4ygUCmi1Wuh0OiiVSkilUjCbzcle28my2+2F
+        er2OWq32F0DfqQ0GA+SOPTxd3MXk2wweWNOQWn5i1LiF+7rvkMx9C3Ik8n6lUmEnZjIZpNNp+P1+lMtl
+        6HQ61BqdE31nNtakgGyz2YQgCCgWi4hEIsxUarUa8tAjTAUm8NA7Bql7BKOfJLi3cpcBbr36Co4siwFi
+        sRgDhEIhZiqVSsVqP1HA4HQUHNk0A0SjUeTzeXg8Hni9XtakUCjwxr3f1xRwQ77OAKV2u41EIsHuHwwG
+        EQ6HGUAul7NKZfFle09d5coNDDwJgdPr9UYaWRRF9vnoQmkSCnr2QoGFwD54YgqglfdnsbiWxfZeBZdl
+        fnAmk+m0RqMZVGqtMJnNUM5qQaBQ6u2oVqu98/5NIPwq4+K4F+xfmJmZOSWzJCFs78C4vIH5zwJ43w7e
+        rYnMjnWRAVgKkmCBOJku4cL4ahdANWb6gWK1xZqpliM5Vg/lDIuo1Du9NzDAwGNyhUONGLYYwEkG6fBR
+        f4jmsPhFPGYKuCrrXYFKok3hgABWNronuzaPJ5j3dZMdiiWYPAIYnkugUGlCLDWwW6gjLdbIpqsQMmXW
+        3M9XZO7fvXGOu/06tjo0vVm7+TKK68/XcW0qRBoCuDThw3mpu6/PDb/n/wDHYAaWqmn6JAAAAABJRU5E
+        rkJggg==
 </value>
   </data>
 </root>
